# mepassa.app

./: .env.example  .gitignore  AGENTS.md  AUDIT_REPORT.md  AUDIT_REPORT_V2.md  AUDIT_REPORT_V3.md  BUILD_AND_TEST.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  EXECUCAO.md  FASES_5_E_6_COMPLETAS.md  FASE_7_COMPLETA.md  FASE_8_TESTING_GUIDE.md  ISSUES_BACKLOG.md  Makefile  PROGRESS_REPORT.md  README.md  docker-compose.yml
.claude/: settings.local.json
.github/workflows/: android-ci.yml  core-ci.yml  desktop-ci.yml  ios-ci.yml
android/: .gitignore  BUILD_GUIDE.md  ETAPA_4_COMPLETED.md  FIREBASE_SETUP.md  README.md  TESTING.md  build-native.sh  build.gradle.kts  generate-bindings.sh  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  google-services.json.example  proguard-rules.pro
core/: Cargo.toml  FASE5_ARTIFACTS.md  FFI_IMPLEMENTATION.md  build.rs
core/.cargo/: config.toml
core/examples/: basic_p2p.rs  generate_bindings.rs  simple_identity.rs  simple_swift_gen.rs
core/src/: identity_client.rs  lib.rs  mepassa.udl
core/src/api/: builder.rs  client.rs  events.rs  mod.rs
core/tests/: README.md  identity_integration.rs  message_integration.rs  p2p_messaging.rs  relay_integration.rs  voip_integration.rs
desktop/: .gitignore  BUILD_GUIDE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
desktop/src/: App.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
docs/: APNS_SETUP_GUIDE.md  README.md
docs/api/: identity-server.yaml
docs/architecture/: 01-hybrid-architecture.md  02-core-components.md
docs/decisions/: 001-username-identity-system.md
docs/guides/: getting-started.md
docs/schemas/: sqlite-client.sql
documentos/: alternativas_nome_detalhadas.md  arquitetura_p2p_detalhada.md  mepassa_brand_guidelines.md  mepassa_chamadas_voip.md  mepassa_logo_prompts.md  mepassa_roadmap_atualizado.md  mepassa_stack_visual.md  mepassa_tech_stack_completo.md  nomes_curtos_brasileiros.md  omega_chat_project_plan.md  omega_core_structure.md  omega_docker_dev_env.md  zaplivre_landing_page.html  zaplivre_naming_strategy.md  zaplivre_plano_30_dias.md
documentos/start/: LEIA_PRIMEIRO_arquitetura_hibrida.md  mepassa_arquitetura_hibrida.md  mepassa_comparacao_arquiteturas.md
ios/: .gitignore  README.md  build-all.sh  build-rust.sh  generate-bindings.sh  pre-build-check.sh  project.yml
ios/MePassa/: Info.plist  MePassa-Bridging-Header.h
ios/MePassa.xcodeproj/: project.pbxproj
proto/: messages.proto
scripts/: build-dmg.md  build-dmg.sh  build.sh
server/bootstrap/: .env.example  Cargo.toml  Dockerfile  FASE_9_COMPLETED.md  README.md  STORAGE_SQLITE.md
server/bootstrap/src/: behaviour.rs  config.rs  health.rs  main.rs  storage.rs
server/coturn/: healthcheck.sh  turnserver.conf
server/identity/: .env.example  Cargo.toml  README.md  schema.sql
server/postgres/: init.sql
server/push/: .env.example  Cargo.toml  Dockerfile  ETAPA_3_COMPLETED.md  README.md
server/push/src/: apns.rs  fcm.rs  main.rs
server/push/src/api/: mod.rs  register.rs  send.rs  unregister.rs
server/store/: Cargo.toml  Dockerfile
server/store/src/: api.rs  database.rs  main.rs  models.rs  redis_client.rs  ttl_cleanup.rs
server/turn-credentials/: Cargo.toml  Dockerfile
(+194 files in other folders)
