[package]
name = "mepassa-push"
version = "0.1.0"
edition = "2021"
authors = ["Integrall Tech <contato@integralltech.com.br>"]
description = "Push notification service for MePassa"
license = "AGPL-3.0"

[dependencies]
# Workspace dependencies
tokio = { workspace = true, features = ["full"] }
axum = { workspace = true, features = ["json"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors", "trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Database (PostgreSQL only - don't use workspace to avoid SQLite conflict)
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "macros"], default-features = false }

# Firebase Cloud Messaging
fcm = "0.9"

# Apple Push Notification Service
a2 = "0.10"
jsonwebtoken = "9.2"

# Environment variables
dotenvy = "0.15"

# Local dependencies
# mepassa-core = { path = "../../core" }  # TODO: adicionar depois

[[bin]]
name = "mepassa-push"
path = "src/main.rs"
